--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
       </a>
 
       <!-- Phone -->
-      <address class="navbar-address visible-md visible-xl">WhatsApp: <span class="text-dark">(11) 99100 1961</span></address>
+      <address class="navbar-address visible-md visible-xl">
+        WhatsApp: <a href="https://wa.me/5511991001961" class="text-dark" target="_blank">(11) 99100-1961</a>
+      </address>
+      
 
       <!-- Button -->
       <button type="button" class="navbar-toggle hidden-lg" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
