--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,9 @@
                     </div>
                     <div class="col-contact col-lg-6">
                       <p class="contact-top"><strong class="text-muted">WhatsApp:</strong></p>
-                      <p class="phone-lg text-dark">+55 (11) 99100 1961</p>
+                      <p class="phone-lg text-dark">
+                        <a href="https://wa.me/5511991001961" class="text-dark" target="_blank">+55 (11) 99100-1961</a>
+                      </p>                      
                       <div class="text-muted"><strong class="text-dark">Nos siga nas redes sociais</strong><br>
                         <div class="contact-social social-list">
                           <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
