--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
                         <textarea class="input-gray" name="message" id="message" required placeholder="Message*"></textarea>
                       </div>
                       <div class="col-sm-12">
-                        <button type="submit" class="btn-upper btn-yellow btn">Send Message</button>
+                        <button type="submit" class="btn-upper btn-yellow btn">Enviar WhatsApp</button>
                       </div>
                     </div>
                     <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you! Your message has been successfully sent...</div>
