--- a/index.html
+++ b/index.html
@@ -1441,18 +1441,14 @@
           <a class="brand pull-left" href="#">
             <img alt="" src="images/brand.png">
             <div class="brand-info">
-              <div class="brand-name">skanhoous</div>
+              <div class="brand-name">skanhous</div>
               <div class="brand-text">incorporadora</div>
             </div>
           </a>
         </div>
         <div class="flex-item">
           <div class="social-list pull-sm-right">
-            <a href="" class="icon ion-social-twitter"></a>
-            <a href="" class="icon ion-social-facebook"></a>
-            <a href="" class="icon ion-social-googleplus"></a>
-            <a href="" class="icon ion-social-linkedin"></a>
-            <a href="" class="icon ion-social-dribbble-outline"></a>
+            <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
           </div>
         </div>
         <div class="flex-item">
