--- a/index.html
+++ b/index.html
@@ -1449,6 +1449,7 @@
         <div class="flex-item">
           <div class="social-list pull-sm-right">
             <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
+            <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
           </div>
         </div>
         <div class="flex-item">
