--- a/index.html
+++ b/index.html
@@ -1362,8 +1362,8 @@
                         <input class="input-gray" type="email" name="email" id="email" required placeholder="Email*">
                       </div>
                       <div class="form-group col-sm-12 col-lg-4">
-                        <!-- Campo de Assunto transformado em dropdown -->
-                        <select class="input-gray" name="subject" id="subject" required>
+                        <!-- Campo de Assunto com formatação de estilo -->
+                        <select class="input-gray form-control" name="subject" id="subject" required>
                           <option value="" disabled selected>Escolha um assunto*</option>
                           <option value="Contato Comercial">Contato Comercial</option>
                           <option value="Parcerias">Parcerias</option>
@@ -1376,11 +1376,11 @@
                         <textarea class="input-gray" name="message" id="message" required placeholder="Message*"></textarea>
                       </div>
                       <div class="col-sm-12">
-                        <button type="submit" class="btn-upper btn-yellow btn">Enviar WhatsApp</button>
+                        <button type="submit" class="btn-upper btn-yellow btn">Send Message</button>
                       </div>
                     </div>
                     <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you! Your message has been successfully sent...</div>
-                    <div class="error-message">Obrigado pelo envio da sua Mensagem. </div>
+                    <div class="error-message">We're sorry, but something went wrong</div>
                   </form>
                 </div>
                 
