--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
                   <form class="js-form" id="whatsappForm">
                     <div class="row">
                       <div class="form-group col-sm-6 col-lg-4">
-                        <input class="input-gray" type="text" name="name" id="name" required placeholder="Name*">
+                        <input class="input-gray" type="text" name="nome" id="name" required placeholder="Name*">
                       </div>
                       <div class="form-group col-sm-6 col-lg-4">
                         <input class="input-gray" type="email" name="email" id="email" required placeholder="Email*">
@@ -1373,10 +1373,10 @@
                         </select>
                       </div>
                       <div class="form-group col-sm-12">
-                        <textarea class="input-gray" name="message" id="message" required placeholder="Message*"></textarea>
+                        <textarea class="input-gray" name="Mensagem" id="message" required placeholder="Message*"></textarea>
                       </div>
                       <div class="col-sm-12">
-                        <button type="submit" class="btn-upper btn-yellow btn">Send Message</button>
+                        <button type="submit" class="btn-upper btn-yellow btn">Enviar WhatsApp</button>
                       </div>
                     </div>
                     <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you! Your message has been successfully sent...</div>
