--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@
                       </div>
                     </div>
                     <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you! Your message has been successfully sent...</div>
-                    <div class="error-message">We're sorry, but something went wrong</div>
+                    <div class="error-message">Obrigado por entrar em contato com a Skan Hous.</div>
                   </form>
                 </div>
                 
