--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 2 -->
               <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
@@ -181,7 +181,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 3 -->
@@ -200,7 +200,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 4 -->
@@ -218,7 +218,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 5 -->
               <div class="slider-title tp-caption tp-resizeme" 
@@ -308,7 +308,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 2 -->
               <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
@@ -325,7 +325,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 3 -->
@@ -344,7 +344,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 4 -->
@@ -362,7 +362,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 5 -->
               <div class="slider-title tp-caption tp-resizeme" 
@@ -453,7 +453,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 2 -->
               <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
@@ -470,7 +470,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 3 -->
@@ -489,7 +489,7 @@
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
 
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
 
               <!-- Layer 4 -->
@@ -507,7 +507,7 @@
                 data-paddingright="[0,0,0,0]"
                 data-paddingbottom="[0,0,0,0]"
                 data-paddingleft="[0,0,0,0]"
-                style="background-color:#cee002;"> </div>
+                style="background-color:#FFCE04;"> </div>
 
               <!-- Layer 5 -->
               <div class="slider-title tp-caption tp-resizeme" 
