--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             <div class="col-md-6">
               <strong class="section-subtitle">sobre</strong>
               <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de Alta Padrão</h2>
-              <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário, analisa as melhores oportunidades do mercado e realiza estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade. Desde a escolha do loteamento correto  até a construção de casas modulares de alto padrão, desenvolvemos projetos pensando em um espaço acolhedor e seguro, fruto de projetos desenvolvidos com tecnologia e por uma equipe altamente especializada em desenvolvimentos imobiliários. Seja bem vindo a Skan Hous. </p>
+              <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário. <b>Analisamos as melhores oportunidades do mercado e através estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade.</b> <b>Da escolha do loteamento até a construção de casas modulares de alto padrão, desenvolvemos projetos completos pensando em um espaço acolhedor e seguro, fruto de projetos desenvolvidos com tecnologia por uma equipe altamente especializada em desenvolvimentos imobiliários.</b> Seja bem vindo a Skan Hous. </p>
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
