--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
       <section id="about" class="section section-about">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
               <strong class="section-subtitle">sobre</strong>
-              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de Alta Padrão</h2>
-              <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário. <b>Analisamos as melhores oportunidades do mercado e através estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade.</b> <b>Da escolha do loteamento até a construção de casas modulares de alto padrão, desenvolvemos projetos completos pensando em um espaço acolhedor e seguro, fruto de projetos desenvolvidos com tecnologia por uma equipe altamente especializada em desenvolvimentos imobiliários.</b> Seja bem vindo a Skan Hous. </p>
+              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais</h2>
+              <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário. <p>Analisamos as melhores oportunidades do mercado através estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade.</p> <p>Desde o loteamento até a construção de casas modulares de alto padrão, desenvolvemos projetos completos pensando em um espaço acolhedor e seguro, fruto de projetos tecnologicos criados por especialistas  em desenvolvimentos imobiliários.</p> Seja bem vindo a Skan Hous. </p>
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
