--- a/index.html
+++ b/index.html
@@ -582,31 +582,35 @@
 
     <div class="content">   
 
-      <!-- Section About -->
-      <section id="about" class="section section-about">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <strong class="section-subtitle">sobre</strong>
-              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais</h2>
-              <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário. <p>Analisamos as melhores oportunidades do mercado através estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade.</p> <p>Desde o loteamento até a construção de casas modulares de alto padrão, desenvolvemos projetos completos pensando em um espaço acolhedor e seguro, fruto de projetos tecnologicos criados por especialistas  em desenvolvimentos imobiliários.</p> Seja bem vindo a Skan Hous. </p>
-              <div class="experience-box">
-                <div class="experience-border"></div>
-                <div class="experience-content">
-                  <div class="experience-number">7</div>
-                  <div class="experience-info">Meses<br>350 M2<br>Completa</div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-5 col-md-offset-1"></div>
-              <div class="dots-image">
-                <img alt="" class="about-img img-responsive" src="images/1-470x660.jpg">
-                <div class="dots"></div>
-              </div>
-            </div>
+<!-- Section About -->
+<section id="about" class="section section-about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5"> <!-- Coluna de texto mais estreita -->
+        <strong class="section-subtitle">sobre</strong>
+        <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais</h2>
+        <p>A Skan Hous possui uma equipe multidisciplinar, composta por engenheiros, arquitetos, desenhistas, programadores, contadores e especialistas em desenvolvimento imobiliário.</p>
+        <p>Analisamos as melhores oportunidades do mercado através de estudos de viabilidade para auxiliar nossos clientes na escolha certa de uma propriedade.</p>
+        <p>Desde o loteamento até a construção de casas modulares de alto padrão, desenvolvemos projetos completos pensando em um espaço acolhedor e seguro, fruto de projetos tecnológicos criados por especialistas em desenvolvimentos imobiliários.</p>
+        <p>Seja bem-vindo à Skan Hous.</p>
+        <div class="experience-box">
+          <div class="experience-border"></div>
+          <div class="experience-content">
+            <div class="experience-number">7</div>
+            <div class="experience-info">Meses<br>350 M2<br>Completa</div>
           </div>
         </div>
-      </section>
+      </div>
+      <div class="col-md-6 col-md-offset-1"> <!-- Coluna de imagem ajustada -->
+        <div class="dots-image">
+          <img alt="" class="about-img img-responsive" src="images/1-470x660.jpg">
+          <div class="dots"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
       <section class="section bg-dots">
         <div class="container">
           <div class="row">
