--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
             <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Triangle<br>Concrete House<br>On Lake</h3>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
+                <h3 class="project-title">Skan Hous Itu<br>Aço, Vidro e Pedra<br>Itu - São Paulo</h3>
+                <p class="project-description">Entregue em apenas 7 meses esta é a casa modular em aço laminado de 350 M2, elevada do solo e implantada em um terreno de 20.000 m2.</p>
               </div>
             </div>
             <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
@@ -681,8 +681,8 @@
             <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Rectangular<br>House Near<br>Italy</h3>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
+                <h3 class="project-title">Skan Hous by F:Poles<br>Woodframe<br>Lago Azul - Sorocaba</h3>
+                <p class="project-description">Projeto Modular de alto padrão desenvolvido em Madeira Engenheirada. Escritório de arquitetura F:Poles. </p>
               </div>
             </div>
             <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
@@ -693,8 +693,8 @@
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Milko<br>Co-Working<br>Building</h3>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
+                <h3 class="project-title">Skan Hous 2.0<br>Steelframe<br>Alessandra Pretti </h3>
+                <p class="project-description">O projeto 2.0 é uma grande evolução da versão 1.0 desenvolvida em Itu. </p>
               </div>
             </div>
             <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
@@ -705,8 +705,8 @@
             <img alt="" class="img-responsive" src="images/projects/4-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Redesign<br>Interior For<br>Villa</h3>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
+                <h3 class="project-title">Tiny House<br>Módulo Conceito<br>Para Hotelaria</h3>
+                <p class="project-description">O crescente mercado de hospedagem agora conta com esta unidade de 30 a 60 m2. </p>
               </div>
             </div>
             <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
