--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
       </a>
 
       <!-- Phone -->
-      <address class="navbar-address visible-md visible-xl">whatsapp: <span class="text-dark">+55 11 99100 1961</span></address>
+      <address class="navbar-address visible-md visible-xl">
+        WhatsApp: <a href="https://wa.me/5511991001961" class="text-dark" target="_blank">(11) 99100-1961</a>
+      </address>
 
       <!-- Button -->
       <button type="button" class="navbar-toggle hidden-lg" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -1264,6 +1266,7 @@
                         <div class="contact-social social-list">
                           <a href="" class="icon ion-social-instagram"></a>
                           <a href="" class="icon ion-social-linkedin"></a>
+                          <a href="" class="icon ion-social-link"></a>
                         </div>
                       </div>
                     </div>
@@ -1278,7 +1281,7 @@
                 <div class="col-md-3">
                   <div class="section-info">
                     <div class="title-hr wow fadeInLeft"></div>
-                    <div class="info-title">You need help?</div>
+                    <div class="info-title">Fale com a gente</div>
                   </div>
                 </div>
                 <div class="col-md-9">
@@ -1288,7 +1291,7 @@
                         <input class="input-gray" type="text" name="name" required placeholder="Name*">
                       </div>
                       <div class="form-group col-sm-6 col-lg-4">
-                        <input class="input-gray" type="email" name="email" placeholder="Email">
+                        <input class="input-gray" type="email" name="email" required placeholder="Email*">
                       </div>
                       <div class="form-group col-sm-12 col-lg-4">
                         <input class="input-gray" type="text" name="subject" placeholder="Subject (Optinal)">
@@ -1296,10 +1299,10 @@
                       <div class="form-group col-sm-12">
                         <textarea class="input-gray" name="message"  required  placeholder="Message*"></textarea>
                       </div>
-                      <div class="col-sm-12"><button type="submit" class="btn-upper btn-yellow btn">Send Message</button></div>
+                      <div class="col-sm-12"><button type="submit" class="btn-upper btn-yellow btn">Enviar Mensagem</button></div>
                     </div>
-                    <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you!. Your message is successfully sent...</div>
-                    <div class="error-message">We're sorry, but something went wrong</div>
+                    <div class="success-message"><i class="fa fa-check text-primary"></i> Obrigado!. Sua mensagem foi enviada com Sucesso! Por favor aguarde! </div>
+                    <div class="error-message">Desculpe, algo deu errado.</div>
                   </form>
                 </div>
               </div>
@@ -1316,29 +1319,27 @@
           <a class="brand pull-left" href="#">
             <img alt="" src="images/brand.png">
             <div class="brand-info">
-              <div class="brand-name">bauhaus</div>
-              <div class="brand-text">architecture</div>
+              <div class="brand-name">SKAN HOUS</div>
+              <div class="brand-text">Incorporadora</div>
             </div>
           </a>
         </div>
         <div class="flex-item">
           <div class="social-list pull-sm-right">
-            <a href="" class="icon ion-social-twitter"></a>
-            <a href="" class="icon ion-social-facebook"></a>
-            <a href="" class="icon ion-social-googleplus"></a>
+            <a href="" class="icon ion-social-instagram"></a>
             <a href="" class="icon ion-social-linkedin"></a>
-            <a href="" class="icon ion-social-dribbble-outline"></a>
+            <a href="" class="icon ion-social-link"></a>
           </div>
         </div>
         <div class="flex-item">
           <ul class="lang-list">
-            <li class="active"><a href="">EN</a></li>
-            <li><a href="">FR</a></li>
-            <li><a href="">DE</a></li>
+            <li class="active"><a href="">PT</a></li>
+            <li><a href="">EN</a></li>
+            <li><a href="">ES</a></li>
           </ul> 
         </div>
         <div class="flex-item">
-          <div class="inline-block pull-sm-right">© Bauhaus 2019. All Rights Resevered</div>
+          <div class="inline-block pull-sm-right">© SKANHOUS 2024. Todos os Direitos Reservados.</div>
         </div>
       </div>
     </footer>
