--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                   <div class="row-contact row">
                     <div class="col-contact col-lg-6">
                       <h3 class="contact-title contact-top">São Paulo, <span>Brasil</span></h3>
-                      <p class="contact-address text-muted"><strong>269 King Str, 05th Floor, Utral Hosue Building, Melbourne, VIC 3000, Australia.</strong></p>
+                      <p class="contact-address text-muted"><strong>Al. Grajau, 219, Barueri - cep 06.454-050.</strong></p>
                       <p class="contact-row"><strong class="text-dark">Email:</strong> contato@skanhous.com.br</p>
                       <p class="contact-row"><strong class="text-dark">Bio:</strong>  www.bio.skanhous.com.br</p>
                     </div>
