--- a/index.html
+++ b/index.html
@@ -1256,8 +1256,20 @@
                     <div class="col-contact col-lg-6">
                       <h3 class="contact-title contact-top">São Paulo, <span>Brasil</span></h3>
                       <p class="contact-address text-muted"><strong>Al. Grajau, 219, Barueri - cep 06.454-050.</strong></p>
-                      <p class="contact-row"><strong class="text-dark">Email:</strong> <a href="mailto:contato@skanhous.com.br">contato@skanhous.com.br</a></p>
-                      <p class="contact-row"><strong class="text-dark">Bio:</strong> <a href="http://www.bio.skanhous.com.br" target="_blank">www.bio.skanhous.com.br</a></p>
+<p class="contact-row">
+  <strong class="text-dark">Bio:</strong> 
+  <a href="http://www.bio.skanhous.com.br" style="color:black; text-decoration:none;" onmouseover="this.style.color='#ffc304';" onmouseout="this.style.color='black';">
+    www.bio.skanhous.com.br
+  </a>
+</p>
+
+<p class="contact-row">
+  <strong class="text-dark">Email:</strong> 
+  <a href="mailto:contato@skanhous.com.br" style="color:black; text-decoration:none;" onmouseover="this.style.color='#ffc304';" onmouseout="this.style.color='black';">
+    contato@skanhous.com.br
+  </a>
+</p>
+
                     </div>
                     <div class="col-contact col-lg-6">
                       <p class="contact-top"><strong class="text-muted">WhatsApp:</strong></p>
