--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
                 <div class="col-md-3">
                   <div class="section-info">
                     <div class="title-hr wow fadeInLeft"></div>
-                    <div class="info-title">Keep in touch</div>
+                    <div class="info-title">Contato e Redes Sociais</div>
                   </div>
                 </div>
                 <div class="col-md-9">
