--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#clients">Clientes</a>
           </li>
           <li>
-            <a href="#team">Time</a>
+            <a href="#team">Missão</a>
           </li>
           <li>
             <a href="#contacts">Contato</a>
@@ -126,7 +126,7 @@
             <a href="#clients">Clientes</a>
           </li>
           <li>
-            <a href="#team">Time</a>
+            <a href="#team">Missão</a>
           </li>
           <li>
             <a href="#contacts">Contato</a>
