--- a/index.html
+++ b/index.html
@@ -1164,6 +1164,7 @@
       </section>
 
 <!-- Section Valores -->
+<section id="team" class="section section-about">
 <div class="experience-box">
   <div class="experience-border"></div>
   <div class="experience-content">
